source/_logs/polly/gcc-arm-cortexm0-cxx14/log-6.txt
Execute command: [
  `which`
  `cmake`
]
[/Volumes/git/m1-sdk/lib]> "which" "cmake"
/usr/local/bin/cmake
Execute command: [
  `cmake`
  `--version`
]
[/Volumes/git/m1-sdk/lib]> "cmake" "--version"
cmake version 3.20.0

CMake suite maintained and supported by Kitware (kitware.com/cmake).
Execute command: [
  `cmake`
  `-H.`
  `-B/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release`
  `-DCMAKE_BUILD_TYPE=Release`
  `-GUnix Makefiles`
  `-DCMAKE_TOOLCHAIN_FILE=/Volumes/git/polly/gcc-arm-cortexm0-cxx14.cmake`
  `-DCMAKE_INSTALL_PREFIX=/Volumes/git/m1-sdk/lib/_install/gcc-arm-cortexm0-cxx14`
]
[/Volumes/git/m1-sdk/lib]> "cmake" "-H." "-B/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release" "-DCMAKE_BUILD_TYPE=Release" "-GUnix Makefiles" "-DCMAKE_TOOLCHAIN_FILE=/Volumes/git/polly/gcc-arm-cortexm0-cxx14.cmake" "-DCMAKE_INSTALL_PREFIX=/Volumes/git/m1-sdk/lib/_install/gcc-arm-cortexm0-cxx14"
-- [polly] Used toolchain: Linux / gcc / armhf / c++14 support / cortex-m0
-- The C compiler identification is GNU 10.2.1
-- The CXX compiler identification is GNU 10.2.1
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/local/bin/arm-none-eabi-gcc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/local/bin/arm-none-eabi-g++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release
Execute command: [
  `cmake`
  `--build`
  `/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release`
  `--config`
  `Release`
  `--target`
  `install`
  `--`
]
[/Volumes/git/m1-sdk/lib]> "cmake" "--build" "/Volumes/git/m1-sdk/lib/_builds/gcc-arm-cortexm0-cxx14-Release" "--config" "Release" "--target" "install" "--"
[  3%] Building CXX object CMakeFiles/Mach1DecodeMINCAPIstatic.dir/Mach1DecodeMINCAPI.cpp.obj
In file included from /Volumes/git/m1-sdk/lib/Mach1DecodeMINCAPI.cpp:4:
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.h:53:5: error: 'milliseconds' does not name a type
   53 |     milliseconds ms;
      |     ^~~~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.h:75:5: error: 'Mach1PlatformType' does not name a type
   75 |     Mach1PlatformType platformType;
      |     ^~~~~~~~~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.h:121:35: error: 'Mach1PlatformType' has not been declared
  121 |  static void convertAnglesToMach1(Mach1PlatformType platformType, float* Y, float* P, float* R);
      |                                   ^~~~~~~~~~~~~~~~~
/Volumes/git/m1-sdk/lib/Mach1DecodeMINCore.h:122:38: error: 'Mach1PlatformType' has not been declared
  122 |  static void convertAnglesToPlatform(Mach1PlatformType platformType, float* Y, float* P, float* R);
      |                                      ^~~~~~~~~~~~~~~~~
make[3]: *** [CMakeFiles/Mach1DecodeMINCAPIstatic.dir/Mach1DecodeMINCAPI.cpp.obj] Error 1
make[2]: *** [CMakeFiles/Mach1DecodeMINCAPIstatic.dir/all] Error 2
make[1]: *** [all] Error 2
